--- a/styles/style.css
+++ b/styles/style.css
@@ -1,284 +1,374 @@
-.page {
-  margin: auto;
+.body__scale {
+  min-width: 1100px;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .header {
-  margin: 92px 51px 92px 51px;
-  display: grid;
-  grid-template-columns: 1fr min-content 1fr;
-  max-width: 1440px;
-}
-
-.header__menu {
-  padding-top: 43px;
+  display: flex;
+  background-color: #fff;
+  padding: 91px 49px 92px 51px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header__links-list {
   display: flex;
-  gap: 32px;
-  justify-content: flex-start;
   list-style: circle;
-  font-size: 18px;
-  text-underline-position: under;
-  min-width: 300px;
+  flex-direction: row;
+  gap: 32px;
 }
 
-.header__list-item-no-bullit {
-  list-style-type: none;
+.header__links-list-item_no-bullit {
+  list-style: none;
+  font-size: 18px;
+}
+
+.header__link {
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
+}
+
+.header__logo {
+  display: block;
+  width: 305px;
 }
 
 .header__logo-image {
-  height: 105px;
+  width: 154px;
+  height: 106px;
 }
 
 .address {
-  padding-top: 3px;
+  align-items: center;
+  color: #000;
+  line-height: 24px;
   font-size: 18px;
+  font-weight: 400;
   font-style: normal;
-  line-height: 24.3px;
-  justify-self: self-end;
   max-width: 240px;
 }
 
-.address__links {
-  text-underline-position: under;
-}
-
 .cover {
-  background: url(../images/cover.jpg) center no-repeat;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  background-image: url(../images/cover.jpg);
   position: relative;
-  max-width: 1440px;
-  min-height: 757px;
+  z-index: 1;
 }
 
 .overlay {
-  background-color: rgb(0 0 0 / 0.6);
-  z-index: 2;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  inset: 0;
+  background-color: rgba(0 0 0 / 0.6);
+  z-index: 1;
 }
 
 .cover__title {
+  font-family: "Raleway", "Arial", sans-serif;
+  display: flex;
   color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
   font-size: 100px;
-  font-weight: bold;
-  letter-spacing: 30px;
+  font-style: normal;
+  font-weight: 700;
   text-transform: uppercase;
-  position: inherit;
-  z-index: 3;
-  padding: 161px 50px 135px 50px;
+  padding-top: 165px;
+  z-index: 2;
 }
 
 .aligned-text {
-  display: inline;
+  align-self: flex-start;
+  font-style: normal;
   letter-spacing: 30px;
+  font-size: 100px;
+  margin-left: 50px;
+  font-weight: 700;
   line-height: 115%;
 }
 
-.aligned-text_center {
-  display: block;
-  line-height: 100%;
-  padding: 20px 30px 20px 0;
-  text-align: center;
-}
-
-.aligned-text_right {
-  display: block;
-  text-align: right;
-  line-height: 100%;
-}
-
-.letter-spacing-extended {
+.span_o {
   letter-spacing: 60px;
 }
 
-.no-letter-spacing {
-  letter-spacing: 0;
+.span_e {
+  letter-spacing: 60px;
+}
+
+.span_a {
+  letter-spacing: 30px;
+}
+
+.aligned-text_center {
+  align-self: center;
+  margin-right: 29px;
+  font-size: 100px;
+  letter-spacing: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 99%;
+  max-width: 100%;
+}
+
+.aligned-text_right {
+  align-self: flex-end;
+  font-size: 100px;
+  letter-spacing: 60px;
+  margin-right: 21px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 101%;
+  max-width: 100%;
 }
 
 .cover__description {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 78px;
-  position: inherit;
-  z-index: 3;
-  padding: 0 50px 60px 0;
+  margin-right: 50px;
+  gap: 77px;
+  z-index: 2;
+  padding-top: 135px;
+  padding-bottom: 50px;
 }
 
 .cover__description-text {
+  display: flex;
   color: #fff;
-  font-size: 22px;
-  font-weight: normal;
-  line-height: 28px;
+  justify-content: center;
   text-transform: uppercase;
-  word-spacing: 18px;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  word-spacing: 17px;
+  max-width: 100%;
+  margin-right: 4px;
+  z-index: 2;
 }
 
 .bet-button {
-  color: #fff;
-  background-color: transparent;
-  border: 1px solid #fff;
   width: 257px;
+  height: 52px;
+  color: #fff;
+  border: 1px solid #fff;
+  background-color: transparent;
+  text-transform: uppercase;
   font-size: 22px;
-  text-transform: uppercase;
-  padding: 12px 32px;
+  font-weight: 400;
 }
 
-.bet-button:hover {
-  cursor: pointer;
-}
-
-.lots__heading {
-  font-size: 40px;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 175px 0 27px 90px;
+.lots {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .lots__card-list {
-  flex-wrap: wrap;
   display: flex;
-  gap: 25px;
-  padding-left: 50px;
-  padding-right: 50px;
+  justify-content: center;
   list-style: none;
-}
-
-.lots__card-list-item {
-  flex-grow: 1;
-  min-height: 450px;
-  width: 430px;
+  width: 100%;
+  gap: 25px;
+  flex-direction: row;
 }
 
 .card {
-  background-position: center;
   display: flex;
+  width: 430px;
+  min-height: 450px;
   flex-direction: column;
   justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 50px 40px;
-  z-index: 1;
+  background-repeat: no-repeat;
   position: relative;
-  height: 100%;
 }
 
 .card-link {
+  width: 100%;
+  height: 100%;
   text-decoration: none;
 }
 
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
-}
-
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
-}
-
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
+.lots__heading {
+  display: flex;
+  align-self: flex-start;
+  justify-content: center;
+  color: #000;
+  font-family: "Raleway", "Arial", sans-serif;
+  line-height: normal;
+  text-transform: uppercase;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  margin: 180px 90px 28px 90px;
 }
 
 .card__title {
-  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  padding-top: 51px;
+  padding-left: 40px;
+  padding-right: 40px;
   font-size: 22px;
+  color: #fff;
+  font-style: normal;
   text-transform: uppercase;
   text-decoration: underline;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 120%;
+  position: relative;
   z-index: 3;
 }
 
 .card__text {
+  display: flex;
   color: #fff;
-  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 120%;
+  font-size: 20px;
+  text-align: start;
+  position: relative;
+  margin: 30px 40px 50px 40px;
   z-index: 3;
 }
 
+.card_type_1 {
+  display: flex;
+  height: 100%;
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card_type_2 {
+  display: flex;
+  height: 100%;
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card_type_3 {
+  display: flex;
+  height: 100%;
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .lots__look-more-link {
+  display: flex;
+  justify-content: start;
+  align-self: flex-start;
+  color: #000;
+  font-style: normal;
   font-size: 20px;
-  margin: 30px 0 0 90px;
-  display: block;
+  font-weight: 400;
+  padding-top: 30px;
+  padding-left: 90px;
+  padding-right: 159px;
+  line-height: normal;
+  text-transform: lowercase;
+  text-underline-position: under;
 }
 
 .about {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-  grid-template-areas:
-    "about__logo about__title about__title"
-    ". about__text about__text";
-  max-width: 1440px;
-  margin-top: 183px;
-  padding-left: 38px;
+  margin: 157px 15px 135px 15px;
+  grid-template-columns: 1fr 2fr;
+  justify-items: center;
+  padding: 24px;
+}
+
+.about__column {
+  justify-content: center;
 }
 
 .about__logo {
+  display: flex;
   background-color: #000;
   width: 240px;
   height: 240px;
-  display: flex;
   border-radius: 50%;
-  grid-area: about__logo;
-  align-self: center;
-  justify-self: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .about__logo-image {
-  width: 148px;
-  align-items: center;
-  margin: auto;
+  display: flex;
+  width: 150px;
+  height: 115px;
 }
 
 .about__title {
-  grid-area: about__title;
+  display: flex;
+  color: #000;
   font-size: 40px;
+  font-style: normal;
   text-transform: uppercase;
-  font-weight: bold;
-  align-self: center;
+  grid-column: 2/2;
+  margin: 101px 1px 104px 12px;
 }
 
 .about__text {
-  grid-area: about__text;
-  font-size: 20px;
+  grid-column: 2/2;
   display: flex;
   flex-direction: column;
-  gap: 25px;
-  max-width: 885px;
+  justify-content: center;
+  align-items: start;
+  gap: 26px;
+  font-size: 20px;
+  margin: 65px 11px 11px 11px;
+  line-height: 23px;
 }
 
 .footer {
   display: flex;
+  margin: 90px 50px;
+  padding-top: 13px;
   justify-content: space-between;
-  padding: 180px 50px 90px;
-  max-width: 1440px;
+}
+
+.footer__menu {
+  align-self: center;
+  padding-bottom: 32px;
 }
 
 .footer__menu-list {
   list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
+  font-family: "Raleway", "Arial", sans-serif;
+  font-size: 18px;
+  font-style: normal;
 }
 
 .footer__social-list {
-  list-style: none;
   display: flex;
+  list-style: none;
   justify-content: space-between;
-  gap: 47px;
-}
-
-.footer__menu-list-item {
-  font-size: 18px;
+  align-content: center;
+  gap: 49px;
+  flex-wrap: wrap;
+  padding-bottom: 48px;
 }
 
 .footer__social-icon {
-  height: 48px;
-  width: 48px;
+  height: 47px;
 }
